--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "jest-mock": "^27.4.2",
     "jest-watch-typeahead": "^0.6.5",
     "ts-jest": "^27.1.2"
   }
