--- a/3-sundaes-on-demand/package.json
+++ b/3-sundaes-on-demand/package.json
@@ -12,6 +12,7 @@
     "boostrap": "^2.0.0",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-testing-library": "^5.0.1",
+    "msw": "^0.36.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
