--- a/3-sundaes-on-demand/package.json
+++ b/3-sundaes-on-demand/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "boostrap": "^2.0.0",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-testing-library": "^5.0.1",
